--- a/AboutUs.html
+++ b/AboutUs.html
@@ -34,7 +34,7 @@
             <header class="header">
                 <nav class="navbar container" id="navbar">
                     <a href="./main.html">
-                        <h2 class="logo">Group 3</h2>
+                        <h2 class="logo">Group 2</h2>
                     </a>
                     <div class="menu" id="menu">
                         <ul class="list">
@@ -45,7 +45,7 @@
                                 <a href="main.html #blogposts" class="list-link">blogs</a>
                             </li>
                             <li class="list-item">
-                                <a href="#" class="list-link">About USs</a>
+                                <a href="#" class="list-link">About US</a>
                             </li>
                         </ul>
                     </div>
