--- a/AboutUs.html
+++ b/AboutUs.html
@@ -33,7 +33,7 @@
             <!-- Header -->
             <header class="header">
                 <nav class="navbar container" id="navbar">
-                    <a href="./main.html">
+                    <a href="main.html">
                         <h2 class="logo">Group 2</h2>
                     </a>
                     <div class="menu" id="menu">
@@ -42,7 +42,7 @@
                                 <a href="main.html" class="list-link current">Home</a>
                             </li>
                             <li class="list-item">
-                                <a href="main.html #blogposts" class="list-link">blogs</a>
+                                <a href="main.html#blogposts" class="list-link">blogs</a>
                             </li>
                             <li class="list-item">
                                 <a href="#" class="list-link">About US</a>
